--- a/Changing Kubuntu's flashing text splash/readme
+++ b/Changing Kubuntu's flashing text splash/readme
@@ -1,1 +1,2 @@
 The location for the "Kubuntu" flashing text is /usr/share/plymouth/themes/kubuntu-logo/
+I have replaced the default one with my own custom logo.
