--- a/Startup_No_Panels/Readme
+++ b/Startup_No_Panels/Readme
@@ -2,3 +2,6 @@ Launching Steam in Big Picture Mode to an empty desktop makes the transition smo
 This is not without quarks. You can always exit big picture mode and right click on the desktop
 and add a default kubuntu panel but this is going to get tiring having to remove it before you
 restart or shutdown.
+
+We can use shellscripts from within steam such as one I am still experimenting with
+calling on "plasmawindowed launchpadPlasma" however this leaves no task manager.
