--- a/Startup_No_Panels/launchpadPlasma/Readme
+++ b/Startup_No_Panels/launchpadPlasma/Readme
@@ -2,3 +2,6 @@ Setting this to launch from steam via shellscript and using kwin rules for the w
 It will show a giant gear and when clicked on will open an application dash panel.
 
 Kwin rules can be imported Settings/System Settings/Window Management/Window Rules (The import button is on the bottom)
+
+*The issue with this is that there is no task manager...if the script for the launchpad was launched from steam you can hit the stop button
+but any apps opened by the application dash panel that get minimized have no way set to bring them to front
