--- a/Additional_Utilities/Readme
+++ b/Additional_Utilities/Readme
@@ -13,3 +13,6 @@ konsole at any time.                                                    #
 https://www.tecmint.com/create-alias-in-linux/                          #
 https://phoenixnap.com/kb/linux-alias-command                           #
 #########################################################################
+apt-get install bashtop
+apt-get install glances
+apt-get install bpytop
