--- a/Additional_Utilities/Readme
+++ b/Additional_Utilities/Readme
@@ -13,6 +13,7 @@ konsole at any time.                                                    #
 https://www.tecmint.com/create-alias-in-linux/                          #
 https://phoenixnap.com/kb/linux-alias-command                           #
 #########################################################################
+These can be launched from within steam as a non steam game.
 apt-get install bashtop
 apt-get install glances
 apt-get install bpytop
