--- a/Startup_No_Panels/Latte-Dock/ReadMe
+++ b/Startup_No_Panels/Latte-Dock/ReadMe
@@ -1,2 +1,3 @@
 You can use the included icon for your start button on the latte dock.
 I placed the shellscriipt inside "/home/yourusername/.steam/resources/shellscript/" folder then called it as a non steam game.
+You can install Latte-Dock via discover in Kubuntu.
