--- a/Additional_Utilities/conky/Steam-Conky-Panel/ReadMe
+++ b/Additional_Utilities/conky/Steam-Conky-Panel/ReadMe
@@ -1,1 +1,26 @@
+User's discretion!!
+sudo add-apt-repository ppa:ubuntuhandbook1/conkymanager2
+sudo apt install conky-manager2
+sudo apt update
 
+Mine was designed to give me the look and feel of being online while in offline mode.
+The intended purpose if I utilize what I already had will be when the "Stop" button is
+pressed in steam; the latte-dock will dissappear. The conky's will dissappear. Steam
+will be the only thing left on a blank desktop and it can now be taken back into big
+picture mode.
+
+Most of my old code seems intact but I need to shift some text left or right.
+!! Imagine this on a 62 inch tv !!! ~ get your game face on !!
+
+To use my conky (Steam-Conky-Panel) these are crucual unless you want to readjust the code:
+Resolution: 2560 x 1440 (16:9)
+Fonts: all KDE font's size 18 except small font which is 16
+sudo apt-install lm-sensors
+sudo sensors-detect - you need to run this first
+
+Pay attention to this:
+
+"Monitoring programs won't work until the needed modules are
+loaded. You may want to run '/etc/init.d/kmod start'
+to load them."
+!! reboot !!
