--- a/Startup_No_Panels/Latte-Dock/ReadMe
+++ b/Startup_No_Panels/Latte-Dock/ReadMe
@@ -8,3 +8,5 @@ When "Stop" is pressed the latte dock dissappears. If set for a custom start ico
 when stopped and restarted.
 
 Check your latte dock settings by right clicking on the dock and uncheck "enable autostart during startup".
+
+When you are done with any need for a desktop, you can click "Stop" at any time and press "Big Picture Mode".
