--- a/OS/etc/systemd/system/readme
+++ b/OS/etc/systemd/system/readme
@@ -1,2 +1,2 @@
-sudo systemctl daemon-reload
-sudo systemctl enable steam_clear_Wallpaper.service
+sudo nano /etc/systemd/system/steam_clear_wallpaper.service
+sudo systemctl enable steam_clear_wallpaper.service
